[project]
name = "databricks-workshop-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatchling.build.targets.wheel]
packages = ["src/databricks-workshop-project"]